--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@heroicons/react": "^2.1.4",
         "@remixicon/react": "^4.2.0",
-        "@tremor/react": "^3.17.4"
+        "@tremor/react": "^3.17.4",
+        "recharts": "^2.15.1"
     }
 }
